--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/principal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/background"
     tools:context=".Principal">
+
     <ImageButton
         android:id="@+id/imageBtnHelp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/background"
+        android:backgroundTint="@color/seethrough"
         android:src="@drawable/help"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,6 +25,8 @@
         android:id="@+id/imageView2"
         android:layout_width="200dp"
         android:layout_height="200dp"
+        android:background="@drawable/shadow_rect"
+        android:elevation="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -35,72 +39,75 @@
         android:id="@+id/btnAyuntamientos"
         android:layout_width="160dp"
         android:layout_height="80dp"
+        android:layout_marginTop="27dp"
         android:text="@string/ayuntamientos"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnProtectoras"
         app:layout_constraintHorizontal_bias="0.678"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.439" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnProtectoras"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:text="@string/protectoras"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btnAyuntamientos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.86"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/btnAyuntamientos"
         app:layout_constraintVertical_bias="0.439" />
 
     <Button
         android:id="@+id/btnColonias"
         android:layout_width="160dp"
         android:layout_height="80dp"
+        android:layout_marginTop="12dp"
         android:text="@string/colonias"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnGatos"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnAyuntamientos"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.603" />
+        app:layout_constraintTop_toBottomOf="@+id/btnAyuntamientos"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnGatos"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:text="@string/gatos"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintBottom_toBottomOf="@+id/btnColonias"
+        app:layout_constraintEnd_toEndOf="@+id/btnProtectoras"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnProtectoras"
-        app:layout_constraintVertical_bias="0.094" />
+        app:layout_constraintTop_toTopOf="@+id/btnColonias"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnVeterinarios"
         android:layout_width="160dp"
         android:layout_height="80dp"
+        android:layout_marginTop="12dp"
         android:text="@string/veterinarios"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnCuidados"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/btnColonias"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.769" />
+        app:layout_constraintTop_toBottomOf="@+id/btnColonias"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/btnCuidados"
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:text="@string/cuidados"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/btnVeterinarios"
         app:layout_constraintEnd_toEndOf="@+id/btnGatos"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btnGatos"
+        app:layout_constraintTop_toTopOf="@+id/btnVeterinarios"
         app:layout_constraintVertical_bias="0.157" />
 
     <Button
@@ -110,8 +117,8 @@
         android:text="@string/borrarCredenciales"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.945"
+        app:layout_constraintHorizontal_bias="0.943"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976" />
+        app:layout_constraintVertical_bias="0.989" />
 </androidx.constraintlayout.widget.ConstraintLayout>
