--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,8 +3,11 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background">#EBFEF8</color>
+    <color name="main_darker">#4F8574</color>
+    <color name="main_lighter">#82BCA9</color>
     <color name="orange">#FFB725</color>
     <color name="orange_light">#FBE4B5</color>
     <color name="pink">#DA53B9</color>
     <color name="grey">#515151</color>
+    <color name="seethrough">#00515151</color>
 </resources>
