--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,7 +4,8 @@
         <!-- Customize your light theme here. -->
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/main_darker</item>
+        <item name="actionBarTheme">@style/MainTitles</item>
     </style>
 
     <style name="Theme.LosAmigosDeViky" parent="Base.Theme.LosAmigosDeViky" />
