--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,9 +28,16 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
     </style>
-    <style name="MainTitles" parent="Widget.Material3.ActionBar.Solid">
+    <style name="MainTitles" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:textColor">@color/white</item>
-        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="toolbarStyle">@style/AppBarText</item>
+        <item name="android:textSize">30sp</item>
+        <item name="android:shadowColor">@color/black</item>
+        <item name="android:shadowRadius">10</item>
+    </style>
+    <style name="AppBarText">
+        <item name="titleTextColor">@color/white</item>
+        <item name="subtitleTextColor">@color/white</item>
     </style>
 </resources>
