--- a/app/src/main/res/layout/fragment_consulta_colonia.xml
+++ b/app/src/main/res/layout/fragment_consulta_colonia.xml
@@ -34,12 +34,13 @@
         android:id="@+id/spinnerOrdenarColonias"
         android:layout_width="225dp"
         android:layout_height="35dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerViewColonias"
+        android:layout_marginBottom="5dp"
+        app:layout_constraintBottom_toBottomOf="@+id/textViewOrdenarColonias"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.456"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textViewOrdenarColonias"
+        app:layout_constraintTop_toTopOf="@+id/textViewOrdenarColonias"
+        app:layout_constraintVertical_bias="0.375" />
 
     <Button
         android:id="@+id/buttonNuevoColonia"
