--- a/app/src/main/res/layout/fragment_consulta_veterinario.xml
+++ b/app/src/main/res/layout/fragment_consulta_veterinario.xml
@@ -32,23 +32,27 @@
 
     <Spinner
         android:id="@+id/spinnerOrdenarVeterinarios"
-        android:layout_width="225dp"
+        android:layout_width="235dp"
         android:layout_height="35dp"
+        android:layout_marginBottom="5dp"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewVeterinarios"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.456"
+        app:layout_constraintHorizontal_bias="0.482"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.421" />
+        app:layout_constraintVertical_bias="0.685" />
 
     <Button
         android:id="@+id/buttonNuevoVeterinario"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
         android:text="@string/nuevo"
         app:layout_constraintBottom_toTopOf="@+id/recyclerViewVeterinarios"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/spinnerOrdenarVeterinarios"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.363" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
