--- a/app/src/main/res/layout/fragment_principal.xml
+++ b/app/src/main/res/layout/fragment_principal.xml
@@ -41,6 +41,8 @@
         android:layout_height="80dp"
         android:layout_marginTop="27dp"
         android:text="@string/ayuntamientos"
+        android:textAllCaps="false"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnProtectoras"
         app:layout_constraintHorizontal_bias="0.678"
@@ -53,6 +55,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:text="@string/protectoras"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnAyuntamientos"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.86"
@@ -66,6 +69,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="12dp"
         android:text="@string/colonias"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnGatos"
         app:layout_constraintHorizontal_bias="0.0"
@@ -78,6 +82,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:text="@string/gatos"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnColonias"
         app:layout_constraintEnd_toEndOf="@+id/btnProtectoras"
         app:layout_constraintHorizontal_bias="1.0"
@@ -91,6 +96,7 @@
         android:layout_height="80dp"
         android:layout_marginTop="12dp"
         android:text="@string/veterinarios"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnCuidados"
         app:layout_constraintHorizontal_bias="0.0"
@@ -103,6 +109,7 @@
         android:layout_width="160dp"
         android:layout_height="80dp"
         android:text="@string/cuidados"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/btnVeterinarios"
         app:layout_constraintEnd_toEndOf="@+id/btnGatos"
         app:layout_constraintHorizontal_bias="1.0"
