--- a/app/src/main/res/layout/list_item_ayuntamientos.xml
+++ b/app/src/main/res/layout/list_item_ayuntamientos.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
+    android:background="@color/item_content"
     android:orientation="vertical"
-    android:background="@color/orange_light"
     app:layout_anchorGravity="top">
 
     <TextView
@@ -13,18 +13,19 @@
         android:layout_height="25dp"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        android:background="@color/orange"
+        android:background="@color/item_title"
         android:gravity="center"
         android:text="@string/ayuntamiento"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewTelefonoAyuntamiento"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="15dp"
+        android:layout_weight="1"
         android:gravity="left"
         android:text="@string/telefono" />
 
@@ -32,9 +33,9 @@
         android:id="@+id/textViewResponsableAyuntamiento"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="15dp"
+        android:layout_weight="1"
         android:gravity="left"
         android:text="@string/responsable" />
 
@@ -42,9 +43,9 @@
         android:id="@+id/textViewDireccionAyuntamiento"
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="15dp"
+        android:layout_weight="1"
         android:gravity="left"
         android:text="@string/direccion" />
 
