--- a/app/src/main/res/layout/list_item_colonias.xml
+++ b/app/src/main/res/layout/list_item_colonias.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="180dp"
-    android:background="@color/orange_light"
+    android:background="@color/item_content"
     android:orientation="vertical"
     app:layout_anchorGravity="top">
 
@@ -13,10 +13,11 @@
         android:layout_height="25dp"
         android:layout_gravity="center_horizontal"
         android:layout_weight="1"
-        android:background="@color/orange"
+        android:background="@color/item_title"
         android:gravity="center"
         android:text="@string/colonia"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewDireccionColonia"
