--- a/app/src/main/res/layout/list_item_gatos.xml
+++ b/app/src/main/res/layout/list_item_gatos.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/item_content"
     android:orientation="vertical"
-    android:background="@color/orange_light"
     app:layout_anchorGravity="top">
 
     <TextView
@@ -12,76 +12,78 @@
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_gravity="center_horizontal"
-        android:background="@color/orange"
+        android:background="@color/item_title"
         android:gravity="center"
         android:text="@string/gato"
-        android:textSize="20sp"/>
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="165dp"
-        android:orientation="horizontal"
-        android:layout_gravity="center_horizontal">
+        android:layout_gravity="center_horizontal"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/imageViewImagenGato"
             android:layout_width="110dp"
             android:layout_height="110dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginLeft="10dp"
             app:srcCompat="@android:drawable/btn_star_big_on" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
             android:layout_marginHorizontal="15dp"
-            android:layout_marginVertical="5dp">
+            android:layout_marginVertical="5dp"
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/textViewFechaNacimientoGato"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_weight="1"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
                 android:gravity="left"
-                android:text="@string/fecha_nacimiento"/>
+                android:text="@string/fecha_nacimiento" />
 
             <TextView
                 android:id="@+id/textViewChipGato"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_weight="1"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
                 android:gravity="left"
-                android:text="@string/chip"/>
+                android:text="@string/chip" />
 
             <TextView
                 android:id="@+id/textViewSexoGato"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_weight="1"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
                 android:gravity="left"
-                android:text="@string/sexo"/>
+                android:text="@string/sexo" />
 
             <TextView
                 android:id="@+id/textViewEsterilizadoGato"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_weight="1"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1"
                 android:gravity="left"
-                android:text="@string/esterilizado"/>
+                android:text="@string/esterilizado" />
 
             <TextView
                 android:id="@+id/textViewColoniaFKGato"
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
-                android:layout_weight="1.5"
                 android:layout_gravity="center_horizontal"
+                android:layout_weight="1.5"
                 android:gravity="left"
-                android:text="@string/coloniaFK"/>
+                android:text="@string/coloniaFK" />
         </LinearLayout>
 
     </LinearLayout>
@@ -90,10 +92,10 @@
         android:id="@+id/textViewDescripcionGato"
         android:layout_width="match_parent"
         android:layout_height="25dp"
-        android:layout_weight="2"
         android:layout_gravity="center_horizontal"
         android:layout_marginHorizontal="15dp"
         android:layout_marginBottom="10dp"
+        android:layout_weight="2"
         android:gravity="left"
-        android:text="@string/descripcion"/>
+        android:text="@string/descripcion" />
 </LinearLayout>
