--- a/app/src/main/res/layout/list_item_gatos.xml
+++ b/app/src/main/res/layout/list_item_gatos.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="250dp"
+    android:layout_height="230dp"
     android:background="@color/item_content"
     android:orientation="vertical"
     app:layout_anchorGravity="top">
@@ -20,7 +20,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="165dp"
+        android:layout_height="140dp"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal">
 
@@ -31,7 +31,7 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
-            app:srcCompat="@android:drawable/btn_star_big_on" />
+            app:srcCompat="@drawable/baseline_pets_24" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -81,7 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="10dp"
                 android:layout_gravity="center_horizontal"
-                android:layout_weight="1.5"
+                android:layout_weight="2"
                 android:gravity="left"
                 android:text="@string/coloniaFK" />
         </LinearLayout>
@@ -91,11 +91,14 @@
     <TextView
         android:id="@+id/textViewDescripcionGato"
         android:layout_width="match_parent"
-        android:layout_height="25dp"
+        android:layout_height="0dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginHorizontal="15dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginBottom="10dp"
         android:layout_weight="2"
         android:gravity="left"
-        android:text="@string/descripcion" />
+        android:justificationMode="inter_word"
+        android:singleLine="false"
+        android:text="@string/descripcion"
+        android:textAlignment="inherit" />
 </LinearLayout>
