--- a/app/src/main/res/layout/list_item_veterinarios.xml
+++ b/app/src/main/res/layout/list_item_veterinarios.xml
@@ -15,6 +15,7 @@
         android:layout_weight="1"
         android:background="@color/item_title"
         android:gravity="center"
+        android:paddingVertical="0dp"
         android:text="@string/veterinario"
         android:textSize="20sp"
         android:textStyle="bold" />
@@ -28,6 +29,7 @@
         android:layout_marginTop="5dp"
         android:layout_weight="1"
         android:gravity="left"
+        android:paddingTop="2dp"
         android:text="@string/telefono" />
 
     <TextView
@@ -38,6 +40,7 @@
         android:layout_marginHorizontal="15dp"
         android:layout_weight="1"
         android:gravity="left"
+        android:paddingBottom="5dp"
         android:text="@string/especialidad" />
 
 </LinearLayout>
