--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -24,9 +24,11 @@
         <item name="android:textSize">14dp</item>
     </style>
     <style name="ToastStyle">
-        <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/toast_text_color</item>
         <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:justificationMode">inter_word</item>
+        <item name="android:gravity">center</item>
     </style>
     <style name="MainTitles" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:textColor">@color/white</item>
